<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddProduct">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>


    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_image"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design"
        android:hint="@string/product_name"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/product_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_name"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="33dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design"
        android:hint="@string/product_des"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="33dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design"
        android:hint="@string/product_price"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/product_resturent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_price"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="33dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/input_design"
        android:hint="@string/resturent"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_addProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_resturent"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/button"
        android:padding="17dp"
        android:text="@string/btn_addProduct"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


</RelativeLayout>