<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerDetailsForm">

    <EditText
        android:id="@+id/user_name"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_phone"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_design"
        android:ems="10"
        android:hint="@string/user_phone"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_address"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_design"
        android:ems="10"
        android:hint="@string/user_add"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_address"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_design"
        android:ems="10"
        android:hint="@string/user_email"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="186dp"
        android:layout_height="63dp"
        android:layout_below="@id/user_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="85dp"
        android:background="@drawable/button"
        android:padding="5dp"
        android:text="@string/btn_customer"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


</RelativeLayout>