<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">


    <EditText
        android:id="@+id/user_name"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_design"
        android:ems="10"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_phone"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_design"
        android:ems="10"
        android:hint="@string/user_phone"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_phone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_design"
        android:ems="10"
        android:hint="@string/user_pass"
        android:inputType="textPersonName"
        android:padding="20dp"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_password"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="146dp"
        android:background="@drawable/button"
        android:text="@string/btn_signup"/>


</RelativeLayout>