<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="88dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="59dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="225dp"
        android:background="@drawable/input_design"
        android:padding="20dp"
        android:text="@string/btn_signup"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="15dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/button"
        android:hint="@string/btn_login"
        android:padding="20dp"
        android:text="@string/btn_login"
        android:textAlignment="center"
        android:textSize="18sp"
        tools:text="@string/btn_login" />
</RelativeLayout>