<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/close_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Close"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_alignParentStart="true"
                    android:textStyle="bold"
                    />

                <TextView
                    android:id="@+id/update_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Update"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:layout_alignParentEnd="true"
                    android:textStyle="bold"
                    />
            </RelativeLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_bar_setting"
        android:src="@drawable/profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/change_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_image"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="140dp"
        android:layout_marginRight="10dp"
        android:text="Change Profile"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/setting_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/change_profile"
        android:layout_margin="15dp"

        android:layout_marginTop="6dp"


        android:hint="@string/user_phone"
        android:padding="10dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/setting_phone_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_phone_number"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/user_name"
        android:padding="10dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/setting_phone_Address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setting_phone_name"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:hint="@string/user_add"
        android:padding="10dp"
        android:textColor="@android:color/black" />


</RelativeLayout>